--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,18 +120,21 @@ p {
     display: block;
     margin: 10px auto;
     max-width: 150px;
+    height: 200px;
 }
 
 .benefit-brand img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
+    height: 200px;
 }
 
 .benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
+    height: 200px;
 }
 
 .search-engine-optimization {
